--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,154 @@
-<div class="card">
-    <div class="card-header">
-        Featured
-    </div>
-    <div class="card-body">
-        <h4 class="card-title">Special title treatment</h4>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div class="row py-5">
+	<h2 class="category">Category 1</h2>
 </div>
+
+<div class="row">
+	<div class="col-lg-12">
+		<div class="wrapper">
+			<div class="carousel">
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 mw-100 text-left">
+					<div class="card">
+						<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="...">
+						<div class="card-body p-4">
+							<h5 class="card-title">Title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk
+								of the
+								card's content.</p>
+							<div class="row align-items-center">
+								<div class="col">
+									<h4 class="pb-0 mb-0">$3212</h4>
+								</div>
+								<div class="col-7">
+									<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+										style="display: none;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
