--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -34,6 +35,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -57,6 +59,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -80,6 +83,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -103,6 +107,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -126,6 +131,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -149,6 +155,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -168,10 +175,83 @@
 							</div>
 						</div>
 					</div>
-
-
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+		</div>
+		<div class="col-lg-12">
+			<div class=""></div>
 		</div>
 	</div>
 </section>
@@ -189,6 +269,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -212,6 +293,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -235,6 +317,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -258,6 +341,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -281,6 +365,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -304,6 +389,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -327,6 +413,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -346,8 +433,78 @@
 							</div>
 						</div>
 					</div>
-
-
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -367,6 +524,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -390,6 +548,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -413,6 +572,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -436,6 +596,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -459,6 +620,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -482,6 +644,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -505,6 +668,7 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
 								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -524,8 +688,78 @@
 							</div>
 						</div>
 					</div>
-
-
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 mw-100 text-left">
+						<div class="card" data-cardSelected>
+							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-0" alt="..."
+								data-cardSelect>
+							<a class="btn-floating plus" href=""></a>
+							<div class="card-body" data-cardSelect>
+								<h5 class="card-title">Title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk
+									of the
+									card's content.</p>
+							</div>
+							<div class="card-body pt-0">
+								<div class="row align-items-center">
+									<div class="col">
+										<h4 class="pb-0 mb-0">$3212</h4>
+									</div>
+									<div class="col-7">
+										<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+											style="display: none;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
