--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -456,8 +456,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -481,8 +481,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -506,8 +506,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -531,8 +531,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -556,8 +556,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -581,8 +581,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -606,8 +606,8 @@
 						<div class="card" data-cardSelected>
 							<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-4 px-4 pb-1" alt="..."
 								data-cardSelect>
-							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
-								aria-controls="productOne"></a>
+							<a class="btn-floating plus" data-toggle="collapse" href="#productThree" role="button"
+								aria-expanded="false" aria-controls="productOne"></a>
 							<div class="card-body" data-cardSelect>
 								<h5 class="card-title">Title</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk
