--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -143,6 +143,87 @@
 							</div>
 						</div>
 					</div>
+					<div class="swiper-slide">
+						<div class="col-lg-12 mw-100 text-left">
+							<div class="card" data-cardSelected>
+								<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-lg-4 pt-md-2 pt-0 px-lg-4 px-md-2 px-0 pb-1" alt="..."
+									data-cardSelect>
+								<a class="btn-floating" data-toggle="collapse" href="#productSix" role="button" aria-expanded="false"
+									aria-controls="productOne"></a>
+								<div class="card-body pb-2 pb-md-3 pb-lg-4 px-2 px-md-4 px-lg-4" data-cardSelect>
+									<h5 class="card-title">Title</h5>
+									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up the bulk
+										of the
+										card's content.</p>
+								</div>
+								<div class="card-body pt-0 px-2 px-md-4 px-lg-4 pb-2 pb-md-4 pb-lg-4">
+									<div class="row align-items-center">
+										<div class="col">
+											<h4 class="pb-0 mb-0">$3212</h4>
+										</div>
+										<div class="col-lg-7 col-md-7 col-12 mt-2 mt-md-0 mt-lg-0">
+											<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+												style="display: none;">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="col-lg-12 mw-100 text-left">
+							<div class="card" data-cardSelected>
+								<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-lg-4 pt-md-2 pt-0 px-lg-4 px-md-2 px-0 pb-1" alt="..."
+									data-cardSelect>
+								<a class="btn-floating" data-toggle="collapse" href="#productSeven" role="button" aria-expanded="false"
+									aria-controls="productOne"></a>
+								<div class="card-body pb-2 pb-md-3 pb-lg-4 px-2 px-md-4 px-lg-4" data-cardSelect>
+									<h5 class="card-title">Title</h5>
+									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up the bulk
+										of the
+										card's content.</p>
+								</div>
+								<div class="card-body pt-0 px-2 px-md-4 px-lg-4 pb-2 pb-md-4 pb-lg-4">
+									<div class="row align-items-center">
+										<div class="col">
+											<h4 class="pb-0 mb-0">$3212</h4>
+										</div>
+										<div class="col-lg-7 col-md-7 col-12 mt-2 mt-md-0 mt-lg-0">
+											<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+												style="display: none;">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="col-lg-12 mw-100 text-left">
+							<div class="card" data-cardSelected>
+								<img src="{{root}}assets/img/product-img.jpg" class="card-img-top pt-lg-4 pt-md-2 pt-0 px-lg-4 px-md-2 px-0 pb-1" alt="..."
+									data-cardSelect>
+								<a class="btn-floating" data-toggle="collapse" href="#productEight" role="button" aria-expanded="false"
+									aria-controls="productOne"></a>
+								<div class="card-body pb-2 pb-md-3 pb-lg-4 px-2 px-md-4 px-lg-4" data-cardSelect>
+									<h5 class="card-title">Title</h5>
+									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up the bulk
+										of the
+										card's content.</p>
+								</div>
+								<div class="card-body pt-0 px-2 px-md-4 px-lg-4 pb-2 pb-md-4 pb-lg-4">
+									<div class="row align-items-center">
+										<div class="col">
+											<h4 class="pb-0 mb-0">$3212</h4>
+										</div>
+										<div class="col-lg-7 col-md-7 col-12 mt-2 mt-md-0 mt-lg-0">
+											<input class="form-control-sm" type="number" value="0" min="0" max="1000" step="1"
+												style="display: none;">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 				</div>
 				    <!-- If we need pagination -->
@@ -302,9 +383,96 @@
 		</div>
 	</div>
 
+	<div class="collapse" id="productSix" data-parent="#categoryOne">
+		<div class="row mx-5 py-4">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="collapse" id="productSeven" data-parent="#categoryOne">
+		<div class="row mx-5 py-4">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="collapse" id="productEight" data-parent="#categoryOne">
+		<div class="row mx-5 py-4">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="card">
+							<img src="{{root}}assets/img/product-img-1.jpg" class="card-img-top p-4" alt="Product Images">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </section>
 
-<section class="" id="categoryOne">
+<section class="" id="categoryTwo">
 	<div class="row pb-2 pb-sm-2 pb-md-4 pb-lg-5 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
 		<h2 class="category mx-auto mx-sm-auto mx-md-0 mx-lg-0 mb-3">Category 2</h2>
 	</div>
@@ -463,7 +631,7 @@
 		</div>
 	</div>
 
-	<div class="collapse" id="product-One" data-parent="#categoryOne">
+	<div class="collapse" id="product-One" data-parent="#categoryTwo">
 		<div class="row mx-5 py-4">
 			<div class="col-lg-12">
 				<div class="row">
@@ -492,7 +660,7 @@
 		</div>
 	</div>
 
-	<div class="collapse" id="product-Two" data-parent="#categoryOne">
+	<div class="collapse" id="product-Two" data-parent="#categoryTwo">
 		<div class="row mx-5 py-4">
 			<div class="col-lg-12">
 				<div class="row">
@@ -521,7 +689,7 @@
 		</div>
 	</div>
 
-	<div class="collapse" id="product-Three" data-parent="#categoryOne">
+	<div class="collapse" id="product-Three" data-parent="#categoryTwo">
 		<div class="row mx-5 py-4">
 			<div class="col-lg-12">
 				<div class="row">
@@ -550,7 +718,7 @@
 		</div>
 	</div>
 
-	<div class="collapse" id="product-Four" data-parent="#categoryOne">
+	<div class="collapse" id="product-Four" data-parent="#categoryTwo">
 		<div class="row mx-5 py-4">
 			<div class="col-lg-12">
 				<div class="row">
@@ -579,7 +747,7 @@
 		</div>
 	</div>
 
-	<div class="collapse" id="product-Five" data-parent="#categoryOne">
+	<div class="collapse" id="product-Five" data-parent="#categoryTwo">
 		<div class="row mx-5 py-4">
 			<div class="col-lg-12">
 				<div class="row">
