Modal iPhone fixed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,11 @@
 <section class="" id="categoryOne">
-	<div class="row pb-1 pb-sm-1 pb-md-4 pb-lg-5 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
+	<div class="row pb-1 pb-sm-1 pb-md-4 pb-lg-4 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
 		<h2 class="category mx-auto mx-sm-auto mx-md-0 mx-lg-0 mb-1 mb-sm-3">Category 1</h2>
 	</div>
 
 	<div class="row">
 		<div class="col-lg-12">
-			<div class="swiper-container">
+			<div class="swiper-container pt-4">
 				<div class="swiper-wrapper">
 
 					<div class="swiper-slide">
@@ -480,13 +480,13 @@
 </section>
 
 <section class="" id="categoryTwo">
-	<div class="row pb-2 pb-sm-2 pb-md-4 pb-lg-5 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
+	<div class="row pb-1 pb-sm-1 pb-md-4 pb-lg-4 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
 		<h2 class="category mx-auto mx-sm-auto mx-md-0 mx-lg-0 mb-1 mb-sm-3">Category 2</h2>
 	</div>
 
 	<div class="row">
 		<div class="col-lg-12">
-			<div class="swiper-container">
+			<div class="swiper-container pt-4">
 				<div class="swiper-wrapper">
 
 					<div class="swiper-slide">
@@ -791,13 +791,13 @@
 </section>
 
 <section class="" id="categoryTwo">
-	<div class="row pb-2 pb-sm-2 pb-md-4 pb-lg-5 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
+	<div class="row pb-1 pb-sm-1 pb-md-4 pb-lg-4 mt-4 mt-sm-4 mt-md-5 mt-lg-5">
 		<h2 class="category mx-auto mx-sm-auto mx-md-0 mx-lg-0 mb-1 mb-sm-3">Category 3</h2>
 	</div>
 
 	<div class="row">
 		<div class="col-lg-12">
-			<div class="swiper-container">
+			<div class="swiper-container pt-4">
 				<div class="swiper-wrapper">
 
 					<div class="swiper-slide">
